codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_user_input_no_preempt_after_reasoning.snap
---
source: core/tests/suite/pending_input.rs
assertion_line: 766
expression: snapshot
---
Scenario: /responses POST bodies with pending input

## Window 1
-- request 1 (request; First request) --
00:message/developer[2]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    first prompt
-- request 2 (request; Second request) --
03:reasoning:summary=thinking:encrypted=true
04:function_call/shell:{"command":"echo preserved tool call"}
05:message/assistant:
    first answer
06:function_call_output:unsupported call: shell
07:message/user:
    second prompt
